--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           <option value="">All Hazard Types</option>
 	</select>
 	<!-- Languages shows automatically based on loaded translations -->
-	<select id="lang">
+	<select id="lang" style="margin-top: 10px;">
         <option value="en-US">English</option>
 	</select>
       </div>
-      <table>
+      <table align="center"  style="margin-top: 10px;">
         <tr>
           <td class="colorLegend" id="levelNone"></td>
           <td id="levelNoneText">no awareness needed</td>
@@ -58,7 +58,7 @@
           <td id="levelRedText">very dangerous</td>
         </tr>
       </table>
-      <div id="senderName"></div>
+      <div id="senderName"  style="margin-top: 10px;"></div>
     </div>
   </body>
 </html>
