--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
     <script type="text/javascript" src="capmap-config.js"></script>
     <script type="text/javascript" src="js/capmap.js"></script>
-    <!-- Add translation files for required languages-->
-    <script type="text/javascript" src="i18n/translations-en-US.js"></script>
-    <script type="text/javascript" src="i18n/translations-bi-VU.js"></script>
+    <script type="text/javascript" src="js/moment-with-locales.js"></script>
 
+    <!-- Add translation files for required languages-->
+    <!--<script type="text/javascript" src="i18n/translations-en-US.js"></script-->
+    <script type="text/javascript" src="i18n/translations-en-US.js"></script>
+    <!--<script type="text/javascript" src="i18n/translations-ru-KG.js"></script>
+    <script type="text/javascript" src="i18n/translations-ky-KG.js"></script>-->
 
     <script type="text/javascript">
       $( document ).ready(function() {
