[SOL-12906] Add id to legend container table

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <option value="en-US">English</option>
           </select>
         </div>
-        <table align="center"  style="margin-top: 10px;">
+        <table align="center" id="legend-warning-types" style="margin-top: 10px;">
           <tr>
             <td class="colorLegend" id="levelNone"></td>
             <td id="levelNoneText">no awareness needed</td>
