Add meta charset UTF-8

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>SmartAlert</title>
+    <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link rel="apple-touch-icon" href="cap-logo.png">
     <meta name="viewport" content="initial-scale=1.0,
@@ -9,10 +10,7 @@
     <link rel="stylesheet" href="css/capmap.css"/>
     <script type="text/javascript"
 	    src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <!--
-    <script type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js?key=ADD-YOUR-API-KEY&amp;libraries=geometry"></script>
-    -->
+	  
     <link rel="stylesheet" href="css/leaflet.css" />
     <script type="text/javascript" src="js/leaflet.js"></script>
 
