Added latest update time to legend
    When 'showUpdateTime' variable in config file is set to true, user can see latest update time in legend, under the sender name

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </tr>
         </table>
         <div id="senderName"  style="margin-top: 10px;"></div>
+        <div id="sentDate"  style="margin-top: 5px;"></div>
       </div>
     </div>
   </body>
