--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="js/leaflet.js"></script>
 
     <script type="text/javascript" src="capmap-config.js"></script>
+    <script type="text/javascript" src="locations.js"></script>
     <script type="text/javascript" src="js/capmap.js"></script>
     <script type="text/javascript" src="js/moment-with-locales.js"></script>
 
