added some kind of legend.
Somewhat working legend to display icon explanations added, needs some tweaking

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
   <body>
     <div id="map-canvas"></div>
+
+
+
     <div id="legend-container">
       <div id="legend">
         <div id="eventSelect">
@@ -65,6 +68,21 @@
         </table>
         <div id="senderName"  style="margin-top: 10px;"></div>
         <div id="sentDate"  style="margin-top: 5px;"></div>
+      </div>
+    </div>
+
+
+    <div id="map-legend-container">
+      <div id="map-legend">
+        <table align="center" id="legend-icon-names" style="margin-top: 10px;">
+          <thead>
+            <tr>
+              <th colspan="2">Map legends</th>
+            </tr>
+          </thead>
+          <tbody>
+        </tbody>
+        </table>
       </div>
     </div>
   </body>
