User can hide/show legend content

--- a/index.html
+++ b/index.html
@@ -72,17 +72,14 @@
     </div>
 
 
-    <div id="map-legend-container">
-      <div id="map-legend">
-        <table align="center" id="legend-icon-names" style="margin-top: 10px;">
-          <thead>
-            <tr>
-              <th colspan="2">Map legends</th>
-            </tr>
-          </thead>
-          <tbody>
-        </tbody>
+    <div id="icon-legend-container">
+      <div id="icon-legend"> 
+        <div id="icon-legend-header"><u>Map legends</u></div>
+          <table align="center" id="legend-icon-names">
+            <tbody id="icon-legend-body">
+            </tbody>
         </table>
+        <div style="text-align: center;"><button id="icon-legend-button"></button></div>
       </div>
     </div>
   </body>
