fix legend to work better on mobile

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
     <div id="map-canvas"></div>
 
-
+    <div id="testId"> HELLO WORLD</div>
 
     <div id="legend-container">
       <div id="legend">
@@ -79,9 +79,10 @@
             <tbody id="icon-legend-body">
             </tbody>
         </table>
-        <div style="text-align: center;"><button id="icon-legend-button"></button></div>
+        
       </div>
     </div>
+    <div style="text-align: center;"><button id="icon-legend-button"></button></div>
   </body>
 </html>
 <!-- SmartAlert FMI (c) 2015-2016 -->
