add translation to map legend title

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div id="icon-legend-container">
       <div id="icon-legend"> 
-        <div id="icon-legend-header"><u>Map legends</u></div>
+        <div id="icon-legend-header"><u>Map legend</u></div>
           <table align="center" id="legend-icon-names">
             <tbody id="icon-legend-body">
             </tbody>
