--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script type="text/javascript" src="capmap-config.js"></script>
     <script type="text/javascript" src="locations.js"></script>
     <script type="text/javascript" src="js/capmap.js"></script>
-    <script type="text/javascript" src="js/moment-with-locales.js"></script>
-
+    <script type="text/javascript" src="ethiopian_calendar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@latest"></script>
     <!-- Add translation files for required languages-->
     <!--<script type="text/javascript" src="i18n/translations-en-US.js"></script-->
     <script type="text/javascript" src="i18n/translations-en-US.js"></script>
